# Project3

./: CMakeLists.txt  Pair.cpp  Pair.hpp  Parser.cpp  Parser.hpp  README.txt  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  main.cpp
Albums/: Album.cpp  Album.hpp  AlbumInstances.cpp  AlbumInstances.hpp
Artists/: Artist.cpp  Artist.hpp  ArtistInstance.cpp  ArtistInstance.hpp
Tracks/: Track.cpp  Track.hpp  TrackInstance.cpp  TrackInstance.hpp
